[project]
name = "repl-nix-icdpredictorstreamlit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "streamlit>=1.39.0",
    "torch>=2.4.1",
    "transformers>=4.45.2",
]
