[project]
name = "repl-nix-icdpredictorstreamlit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "networkx>=3.4.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.39.0",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch>=2.4.1",
    "transformers>=4.45.2",
]
